adding data-attribute

--- a/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
+++ b/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
@@ -53,7 +53,9 @@
 
             // Adding a class
             a.addClass("movie");
-            
+
+            // Adding a data-attribute with a value of the movie in index i
+            a.attr("data-name", movies[i]);
         }
 
       }
