providing button's text

--- a/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
+++ b/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
@@ -56,6 +56,9 @@
 
             // Adding a data-attribute with a value of the movie in index i
             a.attr("data-name", movies[i]);
+
+            // Providing the button's text with a value fo the movie at index i
+            a.text(movies[i]);
         }
 
       }
