adding button to HTML

--- a/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
+++ b/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
@@ -59,6 +59,9 @@
 
             // Providing the button's text with a value fo the movie at index i
             a.text(movies[i]);
+
+            // Adding the button to the HTML
+            $("#movies-view").append(a);
         }
 
       }
