grab the input from the input box

--- a/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
+++ b/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
@@ -74,6 +74,7 @@
         event.preventDefault();
 
         // Write code to grab the text the user types into the input field
+        var movie = $("#movie-input").val().trim();
         // Write code to add the new movie into the movies array
 
         // The renderButtons function is called, rendering the list of movie buttons
