add the new movie into the movies array

--- a/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
+++ b/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
@@ -75,7 +75,8 @@
 
         // Write code to grab the text the user types into the input field
         var movie = $("#movie-input").val().trim();
-        // Write code to add the new movie into the movies array
+        // Write code to add the new movie into the movies array    
+        movies.push(movie);
 
         // The renderButtons function is called, rendering the list of movie buttons
         renderButtons();
