button displays correctly

--- a/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
+++ b/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
@@ -49,7 +49,7 @@
            // Then dynamically generating buttons for each movie in the array.
            // This code $("<button>") is all jQuery needs to create the start and end tag. 
             // (<button></button>)
-            var a = $("<button");
+            var a = $("<button>");
 
             // Adding a class
             a.addClass("movie");
