button displays correctly

--- a/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-harder.html
+++ b/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-harder.html
@@ -36,6 +36,9 @@
 
       // Function for displaying movie data
       function renderButtons() {
+        // Deleting the movie buttons prior to adding new movie buttons
+        // (this is necessary otherwise we will have repeat buttons)
+        $("#movies-view").empty();
 
         // YOUR CODE GOES HERE
 
