button displays correctly

--- a/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-harder.html
+++ b/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-harder.html
@@ -39,8 +39,21 @@
         // Deleting the movie buttons prior to adding new movie buttons
         // (this is necessary otherwise we will have repeat buttons)
         $("#movies-view").empty();
+        // Looping through the array of movies
+        for (var i = 0; i < movies.length; i++) {
 
-        // YOUR CODE GOES HERE
+// Then dynamicaly generating buttons for each movie in the array.
+// This code $("<button>") is all jQuery needs to create the start and end tag. (<button></button>)
+var a = $("<button>");
+// Adding a class
+a.addClass("movie");
+// Adding a data-attribute with a value of the movie at index i
+a.attr("data-name", movies[i]);
+// Providing the button's text with a value of the movie at index i
+a.text(movies[i]);
+// Adding the button to the HTML
+$("#movies-view").append(a);
+}
 
       }
 
