--- a/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-harder.html
+++ b/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-harder.html
@@ -59,8 +59,18 @@ $("#movies-view").append(a);
 
       // This function handles events where one button is clicked
       $("#add-movie").on("click", function() {
+        // event.preventDefault() prevents the form from trying to submit itself.
+        // We're using a form so that the user can hit enter instead of clicking the button if they want
+        event.preventDefault();
 
-        // YOUR CODE GOES HERE
+        // This line will grab the text from the input box
+        var movie = $("#movie-input").val().trim();
+        // The movie from the textbox is then added to our array
+        movies.push(movie);
+
+        // calling renderButtons which handles the processing of our movie array
+        renderButtons();
+
 
       });
 
