--- a/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-harder.html
+++ b/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-harder.html
@@ -44,6 +44,9 @@
 
 // Then dynamicaly generating buttons for each movie in the array.
 // This code $("<button>") is all jQuery needs to create the start and end tag. (<button></button>)
+// Then dynamicaly generating buttons for each movie in the array.
+// This code $("<button>") is all jQuery needs to create the start and end tag. (<button></button>)
+
 var a = $("<button>");
 // Adding a class
 a.addClass("movie");
