--- a/06-ajax/01-Activities/08-LogMovieName/log-movie-name.html
+++ b/06-ajax/01-Activities/08-LogMovieName/log-movie-name.html
@@ -39,6 +39,9 @@
       function alertMovieName() {
 
         // YOUR CODE GOES HERE!!!
+        var movieName = $(this).attr("data-name");
+
+        alert(movieName);
 
       }
 
