added log-movie-name html

--- a/06-ajax/01-Activities/08-LogMovieName/log-movie-name.html
+++ b/06-ajax/01-Activities/08-LogMovieName/log-movie-name.html
@@ -41,7 +41,7 @@
         // YOUR CODE GOES HERE!!!
         var movieName = $(this).attr("data-name");
 
-    
+        alert(movieName);
 
       }
 
