store retrieved data inside of an objext called response git push quit

--- a/06-ajax/01-Activities/09-ClickJSON/click-json.html
+++ b/06-ajax/01-Activities/09-ClickJSON/click-json.html
@@ -52,6 +52,11 @@
             method: "GET"
         })
 
+         // We store all of the retrieved data inside of an object called "response"
+        .then(function(response) {
+            console.log(response);
+        })
+
       }
 
       // Function for displaying movie data
