store retrieved data inside of an objext called response

--- a/06-ajax/01-Activities/09-ClickJSON/click-json.html
+++ b/06-ajax/01-Activities/09-ClickJSON/click-json.html
@@ -55,6 +55,11 @@
          // We store all of the retrieved data inside of an object called "response"
         .then(function(response) {
             console.log(response);
+
+          // transfer content to HTML
+          $("#movies-view").text(JSON.stringify(response));
+          renderButtons();
+
         })
 
       }
