movies object data dumped in div with id movies-view

--- a/06-ajax/01-Activities/09-ClickJSON/click-json.html
+++ b/06-ajax/01-Activities/09-ClickJSON/click-json.html
@@ -19,6 +19,9 @@
   <div class="container">
     <h1>Movie Search</h1>
 
+    <!-- Movied will Get dumped here -->
+    <div id = "movies-view"></div>
+
     <!-- Buttons will Get Dumped Dere -->
     <div id="buttons-view"></div>
 
