movies object data dumped in div with id movies-view

--- a/06-ajax/01-Activities/09-ClickJSON/click-json.html
+++ b/06-ajax/01-Activities/09-ClickJSON/click-json.html
@@ -60,6 +60,7 @@
             console.log(response);
 
           // transfer content to HTML
+          // element that have id = "movies-view"
           $("#movies-view").text(JSON.stringify(response));
           renderButtons();
 
