console.log the response

--- a/06-ajax/01-Activities/10-WorkingMovieApp/working-movie-app-harder.html
+++ b/06-ajax/01-Activities/10-WorkingMovieApp/working-movie-app-harder.html
@@ -49,8 +49,13 @@
           url: queryURL,
           method: "GET"
         }).then(function(response) {
+            console.log(response);
 
           // YOUR CODE GOES HERE!!!
+
+          // Create a div a hold the movie
+          // Retrieves the Rating Data
+          // Create an element to have the rating displayed
 
         });
 
