--- a/06-ajax/01-Activities/10-WorkingMovieApp/working-movie-app-harder.html
+++ b/06-ajax/01-Activities/10-WorkingMovieApp/working-movie-app-harder.html
@@ -54,6 +54,9 @@
           // YOUR CODE GOES HERE!!!
 
           // Create a div a hold the movie
+          var movieDive = $("<div class = 'movie'>");
+
+
           // Retrieves the Rating Data
           // Create an element to have the rating displayed
 
