--- a/06-ajax/01-Activities/11-BandsInTownApp/bands-in-town.html
+++ b/06-ajax/01-Activities/11-BandsInTownApp/bands-in-town.html
@@ -30,8 +30,7 @@
 <script>
   function searchBandsInTown(artist) {
 
-    //var artistsName = artist;
-        var queryURL = "https://rest.bandsintown.com/artists/" + artist + "?app_id=codingbootcamp";
+    var queryURL = "https://rest.bandsintown.com/artists/" + artist + "?app_id=codingbootcamp";
 
         // Creates AJAX call for the specific movie button being clicked
         $.ajax({
@@ -43,13 +42,14 @@
     // Add code to query the bands in town api searching for the artist received as an argument to this function
     // Using jQuery, append the following to the #artist-div :
     // The artist's name
+    var artistName = $("<h1>").text(response.name);
     // The artists thumbnail image
     // The number of fans tracking this artist
     // The number of upcoming events for this artist
     // A link to the bandsintown url for this artist
     // Note: Append actual HTML elements, not just text
-    var artistInfo = "demo artist";
-    $("#artist-div").append(artistInfo);
+    
+    $("#artist-div").append(artistName);
 });
 
   }
