empty the content of the artist div

--- a/06-ajax/01-Activities/11-BandsInTownApp/bands-in-town.html
+++ b/06-ajax/01-Activities/11-BandsInTownApp/bands-in-town.html
@@ -48,7 +48,8 @@
     // The number of upcoming events for this artist
     // A link to the bandsintown url for this artist
     // Note: Append actual HTML elements, not just text
-    
+    // Empty the contents of the artist-div, append the new artist content
+    $("#artist-div").empty();
     $("#artist-div").append(artistName);
 });
 
