--- a/06-ajax/01-Activities/11-BandsInTownApp/bands-in-town.html
+++ b/06-ajax/01-Activities/11-BandsInTownApp/bands-in-town.html
@@ -43,15 +43,16 @@
     // Using jQuery, append the following to the #artist-div :
     // The artist's name
     var artistName = $("<h1>").text(response.name);
+        var artistURL = $("<a>").attr("href", response.url).append(artistName);
     // The artists thumbnail image
     // The number of fans tracking this artist
     // The number of upcoming events for this artist
     // A link to the bandsintown url for this artist
     // Note: Append actual HTML elements, not just text
-    
+
     // Empty the contents of the artist-div, append the new artist content
     $("#artist-div").empty();
-    $("#artist-div").append(artistName);
+    $("#artist-div").append(artistURL);
 });
 
   }
