--- a/06-ajax/01-Activities/11-BandsInTownApp/bands-in-town.html
+++ b/06-ajax/01-Activities/11-BandsInTownApp/bands-in-town.html
@@ -43,7 +43,8 @@
     // Using jQuery, append the following to the #artist-div :
     // The artist's name
     var artistName = $("<h1>").text(response.name);
-        var artistURL = $("<a>").attr("href", response.url).append(artistName);
+    var artistURL = $("<a>").attr("href", response.url).append(artistName);
+    var artistImage = $("<img>").attr("src", response.thumb_url);
     // The artists thumbnail image
     // The number of fans tracking this artist
     // The number of upcoming events for this artist
@@ -52,7 +53,7 @@
 
     // Empty the contents of the artist-div, append the new artist content
     $("#artist-div").empty();
-    $("#artist-div").append(artistURL);
+    $("#artist-div").append(artistURL, artistImage);
 });
 
   }
