--- a/06-ajax/01-Activities/11-BandsInTownApp/bands-in-town.html
+++ b/06-ajax/01-Activities/11-BandsInTownApp/bands-in-town.html
@@ -47,6 +47,7 @@
     var artistImage = $("<img>").attr("src", response.thumb_url);
     var trackerCount = $("<h2>").text(response.tracker_count + " fans tracking this artist");
     var upcomingEvents = $("<h2>").text(response.upcoming_event_count + " upcoming events");
+    var gotToArtist = $("<a>").attr("href", response.url).text("See Tour Dates");
     // The artists thumbnail image
     // The number of fans tracking this artist
     // The number of upcoming events for this artist
@@ -55,7 +56,7 @@
 
     // Empty the contents of the artist-div, append the new artist content
     $("#artist-div").empty();
-    $("#artist-div").append(artistURL, artistImage, trackerCount, upcomingEvents);
+    $("#artist-div").append(artistURL, artistImage, trackerCount, upcomingEvents, gotToArtist);
 });
 
   }
