added cat-button queryURL comment

--- a/06-ajax/01-Activities/12-CatButton/cat-button.html
+++ b/06-ajax/01-Activities/12-CatButton/cat-button.html
@@ -12,10 +12,10 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript">
-    //
+    // Create an event listner for cat-button
     $("#cat-button").on("click", function() {
 
-      //
+      // Storing giphy API URL for a random cat image
       var queryURL = "https://api.giphy.com/v1/gifs/random?api_key=dc6zaTOxFJmzC&tag=cats";
 
       //
