--- a/06-ajax/01-Activities/12-CatButton/cat-button.html
+++ b/06-ajax/01-Activities/12-CatButton/cat-button.html
@@ -18,16 +18,16 @@
       // Storing giphy API URL for a random cat image
       var queryURL = "https://api.giphy.com/v1/gifs/random?api_key=dc6zaTOxFJmzC&tag=cats";
 
-      //
+      // Performing an AJAX GET request to our queryURL
       $.ajax({
         url: queryURL,
         method: "GET"
       })
 
-      //
+      // After the data from the AJAX  request comes back
         .then(function(response) {
 
-        //
+        // Saving the image_original_url property
           var imageUrl = response.data.image_original_url;
 
           //
