--- a/06-ajax/01-Activities/12-CatButton/cat-button.html
+++ b/06-ajax/01-Activities/12-CatButton/cat-button.html
@@ -30,10 +30,10 @@
         // Saving the image_original_url property
           var imageUrl = response.data.image_original_url;
 
-          //
+          // Creating and storing an image tag
           var catImage = $("<img>");
 
-          //
+          // Setting the catImage src attribute to imageUrl
           catImage.attr("src", imageUrl);
           catImage.attr("alt", "cat image");
 
