Prepending the catImage to the images div

--- a/06-ajax/01-Activities/12-CatButton/cat-button.html
+++ b/06-ajax/01-Activities/12-CatButton/cat-button.html
@@ -37,7 +37,7 @@
           catImage.attr("src", imageUrl);
           catImage.attr("alt", "cat image");
 
-          //
+          // Prepending the catImage to the images div
           $("#images").prepend(catImage);
         });
     });
