--- a/06-ajax/01-Activities/12-CatButton/cat-button.html
+++ b/06-ajax/01-Activities/12-CatButton/cat-button.html
@@ -14,9 +14,10 @@
   <script type="text/javascript">
     // Create an event listner for cat-button
     $("#cat-button").on("click", function() {
+        //alert("Hello");
 
       // Storing giphy API URL for a random cat image
-      var queryURL = "https://api.giphy.com/v1/gifs/random?api_key=dc6zaTOxFJmzC&tag=cats";
+      var queryURL = "https://api.giphy.com/v1/gifs/random?apikey=5siRB0jjirvJrobbHAQrHQWeJGv8jNLe&tag=cats";
 
       // Performing an AJAX GET request to our queryURL
       $.ajax({
@@ -26,6 +27,8 @@
 
       // After the data from the AJAX  request comes back
         .then(function(response) {
+            console.log("hello");
+            console.log(response);
 
         // Saving the image_original_url property
           var imageUrl = response.data.image_original_url;
