added button with qoute

--- a/06-ajax/01-Activities/13-ButtonTriggeredAJAX/button-triggered-ajax.html
+++ b/06-ajax/01-Activities/13-ButtonTriggeredAJAX/button-triggered-ajax.html
@@ -28,7 +28,10 @@
     <!-- YOUR BUTTONS GO HERE!!!!!! Obviously delete this text after you put them between the dashed lines here.  -->
 
     <!-- **************************************** -->
-
+    <button data-person="">Mahatma Gandhi
+        Where there is love there is life.
+      </button>
+  
 
     <!-- STEP THREE: open this file in the browser and click on your buttons. If they don't work, then fix your buttons -->
 
