added button with qoute

--- a/06-ajax/01-Activities/13-ButtonTriggeredAJAX/button-triggered-ajax.html
+++ b/06-ajax/01-Activities/13-ButtonTriggeredAJAX/button-triggered-ajax.html
@@ -32,6 +32,9 @@
         Where there is love there is life.
       </button>
   
+      <button data-person="Aamir Khan">
+        I do what I feel is right. I am not scared to walk on the new path and take risk.
+      </button>
 
     <!-- STEP THREE: open this file in the browser and click on your buttons. If they don't work, then fix your buttons -->
 
