--- a/06-ajax/01-Activities/13-ButtonTriggeredAJAX/button-triggered-ajax.html
+++ b/06-ajax/01-Activities/13-ButtonTriggeredAJAX/button-triggered-ajax.html
@@ -57,7 +57,9 @@
         method: "GET"
       })
         .then(function(response) {
+            //console.log(response);
           var results = response.data;
+         // console.log(results);
 
           for (var i = 0; i < results.length; i++) {
             var gifDiv = $("<div class='item'>");
