set the results equal to response.data

--- a/06-ajax/01-Activities/14-DynamicElements/dynamic-elements.html
+++ b/06-ajax/01-Activities/14-DynamicElements/dynamic-elements.html
@@ -30,6 +30,7 @@
 
         // Step 2: since the image information is inside of the data key,
         // make a variable named results and set it equal to response.data
+        var results = response.data;
 
         // =============== put step 2 in between these dashes ==================
 
