made paragraph tag with jQuery

--- a/06-ajax/01-Activities/14-DynamicElements/dynamic-elements.html
+++ b/06-ajax/01-Activities/14-DynamicElements/dynamic-elements.html
@@ -40,7 +40,9 @@
 
         // Step 3: uncomment the for loop above and the closing curly bracket below.
         // Make a div with jQuery and store it in a variable named animalDiv.
+        var animalDiv = $("<div>");
         // Make a paragraph tag with jQuery and store it in a variable named p.
+        var p = $("<p>");
         // Set the inner text of the paragraph to the rating of the image in results[i].
         // Make an image tag with jQuery and store it in a variable named animalImage.
         // Set the image's src to results[i]'s fixed_height.url.
