--- a/06-ajax/01-Activities/14-DynamicElements/dynamic-elements.html
+++ b/06-ajax/01-Activities/14-DynamicElements/dynamic-elements.html
@@ -44,6 +44,8 @@
         // Make a paragraph tag with jQuery and store it in a variable named p.
         var p = $("<p>");
         // Set the inner text of the paragraph to the rating of the image in results[i].
+        p.text("Rating:" + results[i].rating);
+        console.log(p);
         // Make an image tag with jQuery and store it in a variable named animalImage.
         // Set the image's src to results[i]'s fixed_height.url.
         // Append the p variable to the animalDiv variable.
