--- a/06-ajax/01-Activities/14-DynamicElements/dynamic-elements.html
+++ b/06-ajax/01-Activities/14-DynamicElements/dynamic-elements.html
@@ -48,6 +48,7 @@
         p.text("Rating: " + results[i].rating);
         console.log(p);
         // Make an image tag with jQuery and store it in a variable named animalImage.
+        var animalImage = $("img");
         // Set the image's src to results[i]'s fixed_height.url.
         // Append the p variable to the animalDiv variable.
         animalDiv.append(p);
