set the image's src to results[i]'s fixed_height.url

--- a/06-ajax/01-Activities/14-DynamicElements/dynamic-elements.html
+++ b/06-ajax/01-Activities/14-DynamicElements/dynamic-elements.html
@@ -50,6 +50,7 @@
         // Make an image tag with jQuery and store it in a variable named animalImage.
         var animalImage = $("img");
         // Set the image's src to results[i]'s fixed_height.url.
+        animalImage.attr("src", results[i].images.fixed_height.url);
         // Append the p variable to the animalDiv variable.
         animalDiv.append(p);
         // Append the animalImage variable to the animalDiv variable.
