prepend the animalDiv variable

--- a/06-ajax/01-Activities/14-DynamicElements/dynamic-elements.html
+++ b/06-ajax/01-Activities/14-DynamicElements/dynamic-elements.html
@@ -51,10 +51,15 @@
         var animalImage = $("<img>");
         // Set the image's src to results[i]'s fixed_height.url.
         animalImage.attr("src", results[i].images.fixed_height.url);
+
+        var animalImage1 = $("<img>");
+        animalImage1.attr("src", results[i].images.downsized.url);
+
         // Append the p variable to the animalDiv variable.
         animalDiv.append(p);
         // Append the animalImage variable to the animalDiv variable.
         animalDiv.append(animalImage);
+        animalDiv.append(animalImage1);
         // Prepend the animalDiv variable to the element with an id of gifs-appear-here.
         $("#gifs-appear-here").prepend(animalDiv);
 
