created a variable state and store the image's data-state into it

--- a/06-ajax/01-Activities/15-PausingGifs/pausing-gifs.html
+++ b/06-ajax/01-Activities/15-PausingGifs/pausing-gifs.html
@@ -25,6 +25,7 @@
       // ============== FILL IN CODE HERE FOR STEP TWO =========================
 
       // CODE GOES HERE
+      var state = $(this).attr("data-state");
 
       // =============================================
 
