--- a/06-ajax/01-Activities/15-PausingGifs/pausing-gifs.html
+++ b/06-ajax/01-Activities/15-PausingGifs/pausing-gifs.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
-  <img src="https://media1.giphy.com/media/3o85xkQpyMlnBkpB9C/200_s.gif" data-still="https://media1.giphy.com/media/3o85xkQpyMlnBkpB9C/200_s.gif" data-animate="https://media1.giphy.com/media/3o85xkQpyMlnBkpB9C/200.gif" data-state="still" class="gif">
+  <img src="https://media1.giphy.com/media/3o85xkQpyMlnBkpB9C/200_s.gif" 
+  data-still="https://media1.giphy.com/media/3o85xkQpyMlnBkpB9C/200_s.gif" 
+  data-animate="https://media1.giphy.com/media/3o85xkQpyMlnBkpB9C/200.gif" 
+  data-state="still" 
+  class="gif">
+  
   <img src="https://media2.giphy.com/media/8rFQp4kHXJ0gU/200_s.gif" data-still="https://media2.giphy.com/media/8rFQp4kHXJ0gU/200_s.gif" data-animate="https://media2.giphy.com/media/8rFQp4kHXJ0gU/200.gif" data-state="still" class="gif">
   <img src="https://media3.giphy.com/media/W6LbnBigDe4ZG/200_s.gif" data-still="https://media3.giphy.com/media/W6LbnBigDe4ZG/200_s.gif" data-animate="https://media3.giphy.com/media/W6LbnBigDe4ZG/200.gif" data-state="still" class="gif">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -38,7 +43,13 @@
       // ============== FILL IN CODE HERE FOR STEP THREE =========================
 
       // CODE GOES HERE
+        if (state === "still") {
+            $(this).attr("src", $(this).attr("data-animate"));
+            $(this).attr("data-state", "animate");
 
+        } else {
+            console.log("still");
+        }
       // ==============================================
 
       // STEP FOUR: open the file in the browser and click on the images.
