--- a/06-ajax/01-Activities/15-PausingGifs/pausing-gifs.html
+++ b/06-ajax/01-Activities/15-PausingGifs/pausing-gifs.html
@@ -13,6 +13,13 @@
   data-state="still" 
   class="gif">
 
+  <img src="https://media1.giphy.com/media/cZ7rmKfFYOvYI/200_s.gif" 
+  data-still="https://media1.giphy.com/media/cZ7rmKfFYOvYI/200_s.gif" 
+  data-animate="https://media1.giphy.com/media/cZ7rmKfFYOvYI/200.gif" 
+  data-state="still" 
+  class="gif">
+
+
   <img src="https://media2.giphy.com/media/8rFQp4kHXJ0gU/200_s.gif" data-still="https://media2.giphy.com/media/8rFQp4kHXJ0gU/200_s.gif" data-animate="https://media2.giphy.com/media/8rFQp4kHXJ0gU/200.gif" data-state="still" class="gif">
   <img src="https://media3.giphy.com/media/W6LbnBigDe4ZG/200_s.gif" data-still="https://media3.giphy.com/media/W6LbnBigDe4ZG/200_s.gif" data-animate="https://media3.giphy.com/media/W6LbnBigDe4ZG/200.gif" data-state="still" class="gif">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
