added more image

--- a/06-ajax/01-Activities/15-PausingGifs/pausing-gifs.html
+++ b/06-ajax/01-Activities/15-PausingGifs/pausing-gifs.html
@@ -13,11 +13,18 @@
   data-state="still" 
   class="gif">
 
+  <img src="https://media.giphy.com/media/MCfhrrNN1goH6/giphy_s.gif" 
+  data-still="https://media.giphy.com/media/MCfhrrNN1goH6/giphy_s.gif" 
+  data-animate="https://media.giphy.com/media/MCfhrrNN1goH6/giphy.gif" 
+  data-state="still" 
+  class="gif">
+
   <img src="https://media1.giphy.com/media/cZ7rmKfFYOvYI/200_s.gif" 
   data-still="https://media1.giphy.com/media/cZ7rmKfFYOvYI/200_s.gif" 
   data-animate="https://media1.giphy.com/media/cZ7rmKfFYOvYI/200.gif" 
   data-state="still" 
   class="gif">
+
 
 
   <img src="https://media2.giphy.com/media/8rFQp4kHXJ0gU/200_s.gif" data-still="https://media2.giphy.com/media/8rFQp4kHXJ0gU/200_s.gif" data-animate="https://media2.giphy.com/media/8rFQp4kHXJ0gU/200.gif" data-state="still" class="gif">
