--- a/06-ajax/01-Activities/16-NYTSearch/index.html
+++ b/06-ajax/01-Activities/16-NYTSearch/index.html
@@ -10,8 +10,14 @@
 </head>
 
 <body>
+    <div class="container">
 
-    
+        <!-- Jumbotron  -->
+        <div class="jumbotron">
+          <h1>New York Times Search</h1>
+        </div>
+    </div>
+
 </body>
 
 </html>
