--- a/06-ajax/01-Activities/16-NYTSearch/index.html
+++ b/06-ajax/01-Activities/16-NYTSearch/index.html
@@ -18,6 +18,51 @@
         </div>
     </div>
 
+    <div class="row">
+
+        <!-- Search Parameters Panel  -->
+        <div class="col-lg-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Search Parameters</h3>
+            </div>
+            <div class="panel-body">
+              <form role="form">
+  
+                <div class="form-group">
+                  <label for="search">Search Term:</label>
+                  <input type="text" class="form-control" id="search">
+                </div>
+  
+                <div class="form-group">
+                  <label for="num-records">Number of Records to Retrieve:</label>
+                  <select class="form-control" id="num-records">
+                                  <option value="1">1</option>
+                                  <option value="5" selected>5</option>
+                                  <option value="10">10</option>
+                                </select>
+                </div>
+  
+                <div class="form-group">
+                  <label for="start-year">Start Year:</label>
+                  <input type="text" class="form-control" id="start-year">
+                </div>
+  
+                <div class="form-group">
+                  <label for="end-year">End Year:</label>
+                  <input type="text" class="form-control" id="end-year">
+                </div>
+  
+                <button type="submit" class="btn btn-default" id="search-btn">Search</button>
+                <button type="button" class="btn btn-default">Clear</button>
+  
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+
 </body>
 
 </html>
