--- a/06-ajax/01-Activities/16-NYTSearch/index.html
+++ b/06-ajax/01-Activities/16-NYTSearch/index.html
@@ -61,6 +61,21 @@
           </div>
         </div>
       </div>
+
+      <div class="row">
+        <!-- Results Panel -->
+        <div class="col-lg-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Search Results</h3>
+            </div>
+            <div class="panel-body" id="well-section">
+  
+            </div>
+          </div>
+        </div>
+      </div>
+  
   
 
 </body>
