added jQuery js

--- a/06-ajax/01-Activities/16-NYTSearch/index.html
+++ b/06-ajax/01-Activities/16-NYTSearch/index.html
@@ -76,7 +76,9 @@
         </div>
       </div>
   
-  
+  <!-- jQuery JS -->
+  <script src="https://code.jquery.com/jquery.js"></script>
+
 
 </body>
 
