added link for logic.js

--- a/06-ajax/01-Activities/16-NYTSearch/index.html
+++ b/06-ajax/01-Activities/16-NYTSearch/index.html
@@ -78,6 +78,9 @@
   
   <!-- jQuery JS -->
   <script src="https://code.jquery.com/jquery.js"></script>
+ 
+  <!-- Logic.js -->
+ <script src="logic.js"></script>
 
 
 </body>
