append the to-do value as text to the p element

--- a/07-firebase/01-Activities/01-todolist-nopersistence/1-student-do-todolist.html
+++ b/07-firebase/01-Activities/01-todolist-nopersistence/1-student-do-todolist.html
@@ -63,6 +63,7 @@
       // Create a button with unique identifiers based on what number it is in the list. Again use jQuery to do this.
       // Give your button a data attribute called data-to-do and a class called "checkbox".
       // Lastly append the letter X inside.
+      var toDoClose = $("<button");
 
 
       // Append the button to the to do item
