gave button a data attribute and class

--- a/07-firebase/01-Activities/01-todolist-nopersistence/1-student-do-todolist.html
+++ b/07-firebase/01-Activities/01-todolist-nopersistence/1-student-do-todolist.html
@@ -66,6 +66,7 @@
       var toDoClose = $("<button");
       toDoClose.attr("data-to-do", toDoCount);
       toDoClose.addClass("checkbox");
+      toDoClose.append("X");
 
 
       // Append the button to the to do item
