Append the button to the do item

--- a/07-firebase/01-Activities/01-todolist-nopersistence/1-student-do-todolist.html
+++ b/07-firebase/01-Activities/01-todolist-nopersistence/1-student-do-todolist.html
@@ -70,6 +70,7 @@
 
 
       // Append the button to the to do item
+      toDoItem = toDoItem.prepend(toDoClose);
 
 
       // Add the button and toDoItem to the to-dos div
