add the button and toDoItem to the to-dos div

--- a/07-firebase/01-Activities/01-todolist-nopersistence/1-student-do-todolist.html
+++ b/07-firebase/01-Activities/01-todolist-nopersistence/1-student-do-todolist.html
@@ -74,6 +74,7 @@
 
 
       // Add the button and toDoItem to the to-dos div
+      $("#to-do").append(toDoItem);
 
 
       // Clear the textbox when done
