clear textbox when done

--- a/07-firebase/01-Activities/01-todolist-nopersistence/1-student-do-todolist.html
+++ b/07-firebase/01-Activities/01-todolist-nopersistence/1-student-do-todolist.html
@@ -77,7 +77,8 @@
       $("#to-do").append(toDoItem);
 
 
-      // Clear the textbox when done
+      // Clear the textbox when 
+      $("#to-do").val("");
 
 
       // Add to the toDoCount
