get the number of button from its data attribute

--- a/07-firebase/01-Activities/01-todolist-nopersistence/1-student-do-todolist.html
+++ b/07-firebase/01-Activities/01-todolist-nopersistence/1-student-do-todolist.html
@@ -92,7 +92,7 @@
     $(document.body).on("click", ".checkbox", function() {
 
       // Get the number of the button from its data attribute and hold in a variable called  toDoNumber.
-
+      var toDoNumber = $(this).attr("data-to-do");
 
       // Select and Empty the specific <p> element that previously held the to do item number.
 
