--- a/07-firebase/01-Activities/01-todolist-nopersistence/1-student-do-todolist.html
+++ b/07-firebase/01-Activities/01-todolist-nopersistence/1-student-do-todolist.html
@@ -57,16 +57,16 @@
       // Then append the to-do "value" as text to this <p> element.
         var toDoItem = $("<p>");
          toDoItem.attr("id", "item-" + toDoCount);
-         toDoItem.append("" + toDoTask);
+         toDoItem.append(" " + toDoTask);
          console.log(toDoItem);
 
       // Create a button with unique identifiers based on what number it is in the list. Again use jQuery to do this.
       // Give your button a data attribute called data-to-do and a class called "checkbox".
       // Lastly append the letter X inside.
-      var toDoClose = $("<button");
+      var toDoClose = $("<button>");
       toDoClose.attr("data-to-do", toDoCount);
       toDoClose.addClass("checkbox");
-      toDoClose.append("X");
+      toDoClose.append("✓");
 
 
       // Append the button to the to do item
@@ -74,7 +74,7 @@
 
 
       // Add the button and toDoItem to the to-dos div
-      $("#to-do").append(toDoItem);
+      $("#to-dos").append(toDoItem);
 
 
       // Clear the textbox when 
