--- a/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
+++ b/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
@@ -88,6 +88,7 @@
       event.preventDefault();
 
       // Capture User Inputs and store them into variables
+      var name = $("#name-input").val().trim();
 
 
       // Console log each of the user inputs to confirm we are receiving them correctly
