--- a/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
+++ b/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
@@ -90,7 +90,8 @@
       // Capture User Inputs and store them into variables
       var name = $("#name-input").val().trim();
       var email = $("#email-input").val().trim();
-      
+      var age = $("#age-input").val().trim();
+
 
 
       // Console log each of the user inputs to confirm we are receiving them correctly
