captured user input and stored them into a variable

--- a/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
+++ b/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
@@ -91,6 +91,7 @@
       var name = $("#name-input").val().trim();
       var email = $("#email-input").val().trim();
       var age = $("#age-input").val().trim();
+      var comment = $("#comment-input").val().trim();
 
 
 
