--- a/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
+++ b/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
@@ -96,8 +96,8 @@
 
 
       // Console log each of the user inputs to confirm we are receiving them correctly
-      consolt.log(name);
-      consolt.log(email);
+      console.log(name);
+      console.log(email);
 
 
       // Output all of the new information into the relevant HTML sections
