console log each user input to confirm we are receiving them correctly

--- a/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
+++ b/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
@@ -98,6 +98,8 @@
       // Console log each of the user inputs to confirm we are receiving them correctly
       console.log(name);
       console.log(email);
+      console.log(age);
+      console.log(comment);
 
 
       // Output all of the new information into the relevant HTML sections
