display new information into the releveant HTML sections

--- a/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
+++ b/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
@@ -104,7 +104,8 @@
 
       // Output all of the new information into the relevant HTML sections
       $("#name-display").text(name);
-      
+      $("#name-display").text(email);
+      $("#name-display").text(name);
     });
   </script>
 
