--- a/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
+++ b/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
@@ -105,7 +105,7 @@
       // Output all of the new information into the relevant HTML sections
       $("#name-display").text(name);
       $("#name-display").text(email);
-      $("#name-display").text(name);
+      $("#name-display").text(age);
     });
   </script>
 
