--- a/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
+++ b/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
@@ -106,6 +106,8 @@
       $("#name-display").text(name);
       $("#name-display").text(email);
       $("#name-display").text(age);
+      $("#name-display").text(comment);
+
     });
   </script>
 
