display new information into the releveant HTML sections

--- a/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
+++ b/07-firebase/01-Activities/02-signin-nopersistence/2-student-do-signin-no-persistence.html
@@ -106,7 +106,7 @@
       $("#name-display").text(name);
       $("#email-display").text(email);
       $("#age-display").text(age);
-      $("#name-display").text(comment);
+      $("#comment-display").text(comment);
 
     });
   </script>
