clear the HTML fro the greeting header

--- a/07-firebase/01-Activities/03-localstorage-demo/3-instructor-do-localstorage.html
+++ b/07-firebase/01-Activities/03-localstorage-demo/3-instructor-do-localstorage.html
@@ -44,7 +44,7 @@
       event.preventDefault();
 
       // Clear the HTML from the greeting header
-
+      $("#greeting").html("");
       // Grab the user input
 
       // Clear absolutely everything stored in localStorage using localStorage.clear()
