grab the user input

--- a/07-firebase/01-Activities/03-localstorage-demo/3-instructor-do-localstorage.html
+++ b/07-firebase/01-Activities/03-localstorage-demo/3-instructor-do-localstorage.html
@@ -45,8 +45,9 @@
 
       // Clear the HTML from the greeting header
       $("#greeting").html("");
-      // Grab the user input
 
+      // Grab the user input
+      var username = $("#your-name").val().trim()
       // Clear absolutely everything stored in localStorage using localStorage.clear()
 
       // Store the username into localStorage using "localStorage.setItem"
