clear absolutely everything stored in localStorage

--- a/07-firebase/01-Activities/03-localstorage-demo/3-instructor-do-localstorage.html
+++ b/07-firebase/01-Activities/03-localstorage-demo/3-instructor-do-localstorage.html
@@ -48,7 +48,9 @@
 
       // Grab the user input
       var username = $("#your-name").val().trim()
+
       // Clear absolutely everything stored in localStorage using localStorage.clear()
+      localStorage.clear();
 
       // Store the username into localStorage using "localStorage.setItem"
 
