store the username into localStorage

--- a/07-firebase/01-Activities/03-localstorage-demo/3-instructor-do-localstorage.html
+++ b/07-firebase/01-Activities/03-localstorage-demo/3-instructor-do-localstorage.html
@@ -53,6 +53,7 @@
       localStorage.clear();
 
       // Store the username into localStorage using "localStorage.setItem"
+      localStorage.setItem("name", username);
 
       // And display that name for the user using "localStorage.getItem"
 
