--- a/07-firebase/01-Activities/03-localstorage-demo/3-instructor-do-localstorage.html
+++ b/07-firebase/01-Activities/03-localstorage-demo/3-instructor-do-localstorage.html
@@ -56,6 +56,7 @@
       localStorage.setItem("name", username);
 
       // And display that name for the user using "localStorage.getItem"
+      $("#greeting").text(localStorage.getItem("name"));
 
     });
 
