--- a/07-firebase/01-Activities/04-signin-localstorage/4-student-do-signin-localstorage.html
+++ b/07-firebase/01-Activities/04-signin-localstorage/4-student-do-signin-localstorage.html
@@ -104,6 +104,8 @@
       $("#comment-display").text(comment);
 
       // Clear localStorage
+      localStorage.clear();
+
 
       // Store all content into localStorage
     });
