store all content into localStorage

--- a/07-firebase/01-Activities/04-signin-localstorage/4-student-do-signin-localstorage.html
+++ b/07-firebase/01-Activities/04-signin-localstorage/4-student-do-signin-localstorage.html
@@ -106,8 +106,11 @@
       // Clear localStorage
       localStorage.clear();
 
-
       // Store all content into localStorage
+      localStorage.setItem("name", name);
+      localStorage.setItem("email", email);
+
+
     });
 
     // By default display the content from localStorage
