store all content into localStorage

--- a/07-firebase/01-Activities/04-signin-localstorage/4-student-do-signin-localstorage.html
+++ b/07-firebase/01-Activities/04-signin-localstorage/4-student-do-signin-localstorage.html
@@ -109,6 +109,9 @@
       // Store all content into localStorage
       localStorage.setItem("name", name);
       localStorage.setItem("email", email);
+      localStorage.setItem("age", age);
+      localStorage.setItem("comment", comment);
+
 
 
     });
