by default display the content from localStorage

--- a/07-firebase/01-Activities/04-signin-localstorage/4-student-do-signin-localstorage.html
+++ b/07-firebase/01-Activities/04-signin-localstorage/4-student-do-signin-localstorage.html
@@ -117,6 +117,8 @@
     });
 
     // By default display the content from localStorage
+    $("#name-display").text(localStorage.getItem("name"));
+
 
   </script>
 
