by default display the content from localStorage

--- a/07-firebase/01-Activities/04-signin-localstorage/4-student-do-signin-localstorage.html
+++ b/07-firebase/01-Activities/04-signin-localstorage/4-student-do-signin-localstorage.html
@@ -118,6 +118,8 @@
 
     // By default display the content from localStorage
     $("#name-display").text(localStorage.getItem("name"));
+    $("#email-display").text(localStorage.getItem("email"));
+
 
 
   </script>
