by default display the content from localStorage

--- a/07-firebase/01-Activities/04-signin-localstorage/4-student-do-signin-localstorage.html
+++ b/07-firebase/01-Activities/04-signin-localstorage/4-student-do-signin-localstorage.html
@@ -120,6 +120,8 @@
     $("#name-display").text(localStorage.getItem("name"));
     $("#email-display").text(localStorage.getItem("email"));
     $("#age-display").text(localStorage.getItem("age"));
+    $("#comment-display").text(localStorage.getItem("comment"));
+
 
 
 
