by default display the content from sessionStorage

--- a/07-firebase/01-Activities/05-signin-sessionstorage/5-student-do-signin-session-storage.html
+++ b/07-firebase/01-Activities/05-signin-sessionstorage/5-student-do-signin-session-storage.html
@@ -114,6 +114,10 @@
     });
 
     // By default display the content from sessionStorage
+    $("#name-display").text(sessionStorage.getItem("name"));
+
+    
+
     
   </script>
 
