--- a/07-firebase/01-Activities/05-signin-sessionstorage/5-student-do-signin-session-storage.html
+++ b/07-firebase/01-Activities/05-signin-sessionstorage/5-student-do-signin-session-storage.html
@@ -115,6 +115,7 @@
 
     // By default display the content from sessionStorage
     $("#name-display").text(sessionStorage.getItem("name"));
+    $("#email-display").text(sessionStorage.getItem("email"));
 
     
 
